style: fix home image on mobile screens

--- a/style.css
+++ b/style.css
@@ -703,12 +703,17 @@ footer .text span a:hover {
         grid-template-columns: 1fr;
         gap: 2rem;
         text-align: center;
+        padding-top: 1rem;
     }
     
     .home-content .home-left {
         max-width: 300px;
         height: 300px;
         margin: 0 auto;
+    }
+
+    .home-content .home-left img {
+        transform: scale(1.5) translateY(80px);
     }
     
     /* Navigation - Improve mobile nav */
@@ -760,10 +765,6 @@ footer .text span a:hover {
     .about .left img {
         height: 250px;
         width: 250px;
-    }
-
-    .home .content{
-        padding-top: 3rem;
     }
     
     .home-content .home-left {
